--- a/public/style.css
+++ b/public/style.css
@@ -6,8 +6,8 @@
     background: transparent;
 }
 body{
-    background-color: #000000;
-    color: white;
+    background-color: #ffffff;
+    color: #292930;
     overflow: hidden;
     overflow-y: scroll;
-}
+}   
