--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -1,8 +1,8 @@
 #intro{
     height: calc(100vh - 4rem);
-    /* width: 85%; */
-    width: 100vw;
-    max-width: 85rem;
+    width: 85%;
+    /* width: 100vw; */
+    max-width: 90%;
     /* margin: 2rem auto; */
     margin: 0 auto;
     overflow: hidden;
@@ -24,7 +24,7 @@
     width:100vh;
     padding: 2rem;
     font-size: 1.5rem;
-    margin-top: 5rem;
+    margin-top: 3rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
