--- a/public/style.css
+++ b/public/style.css
@@ -8,8 +8,8 @@
     
 }
 body{
-    background-color: #171717;
-    color: #EDEDED;
+    background-color: #ffffff;
+    color: #14142b;
     overflow: hidden;
     overflow-y: scroll;
     
