--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,12 +1,13 @@
 .about {
     overflow: hidden; 
     width: 85%; 
+    /* max-width: 100%; */
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
     justify-content: center;
-    margin: auto;
+    margin: 2rem auto;
     padding: 0; /* Remove any default padding */
 }
 .about-title{
@@ -26,31 +27,28 @@
     background-color: #1f1f1f ;
     color: #EDEDED;
     text-align: center;
-    width: 80%;
+    width: 100%;
 }
-#skills .skills-data p{
-    font-size: 1.2rem;
-    padding-top: 2%;
-}
+
 
 .card {
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    margin: 20px;
+    /* padding: 10px; */
+    /* border: 1px solid #ccc; */
+    /* border-radius: 5px; */
+    margin: 10px;
     text-align: center;
-    width: 80%;
+    /* width: 40%; */
     margin: 5% 20px 5% 20px ;
   }
 
   .card img {
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     object-fit: cover;
-    border-radius: 50%;
+    /* border-radius: 50%; */
   }
 
   .card p {
