--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -50,9 +50,10 @@
   
   .navbarBtn:hover {
     color: #000;
-    background-color: #EDEDED;
+    background-color: #da0037;
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
+    transition: 0.7s;
   }
   
   .navbarBtn:active {
