--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -75,9 +75,10 @@
   
   .hire-btn:hover {
     color: #000;
-    background-color: #EDEDED;
+    background-color: #da0037;
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
+    transition: 0.7s;
   }
   
   .hire-btn:active {
