--- a/src/components/portfolio/Portfolio.css
+++ b/src/components/portfolio/Portfolio.css
@@ -70,10 +70,10 @@
 .seemore{
     appearance: none;
     background-color: transparent;
-    border: 2px solid #EDEDED;
+    border: 2px solid #000000;
     border-radius: 15px;
     box-sizing: border-box;
-    color: #EDEDED;
+    color: #000000;
     cursor: pointer;
     display: inline-block;
     font-size: 16px;
@@ -99,7 +99,7 @@
   
   .seemore:hover {
     color: #000;
-    background-color: #EDEDED;
+    background-color: #da0037;
     box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
     transform: translateY(-2px);
   }
