--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -14,6 +14,7 @@
     position: sticky;
     background: rgb(255, 255, 255);
     overflow: hidden;
+    
 
 }
 .navbar .navbar-head{
@@ -76,3 +77,42 @@
     transition: 1s;
     padding-bottom: 0.5rem;
   }
+  .active{
+    color: #DA0037;
+  }
+  .navMenu {
+    position: absolute;
+    top: 5rem;
+    right: 2rem;
+    z-index: 2;
+   
+    flex-direction: column;
+    padding: 0.5rem;
+    height: fit-content;
+    min-width: 15rem;
+    border-radius: 1rem;
+    background-color: white; /* Add a background color to make it visible */
+    color: #DA0037;
+}
+  .listItem{
+    color: #af1d1d;
+    padding: 0.5rem 3rem;
+    margin: 0.25rem;
+
+  }
+  .mobMenu{
+    display: none;
+    object-fit: cover;
+  }
+  @media screen and (max-width: 720px) {
+    .mobMenu {
+        display: flex;
+    }
+
+    .desktopMenu {
+        display: none;
+    }
+    .navbarBtn{
+      display: none;
+    }
+}
