--- a/src/components/intro/Intro.css
+++ b/src/components/intro/Intro.css
@@ -3,7 +3,7 @@
     width: 85%;
     max-width: 90%;
     /* margin: 2rem auto; */
-    margin: 0 auto;
+    margin: 2.3rem auto;
     overflow: hidden;
     position: relative;
     /* background: radial-gradient(circle at 50% 50%, #f6f7ff 5%, transparent 50%);  */
