--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,25 +1,29 @@
 
-.navbar{
-    height: 5rem;
-    width: 85%;
-    max-width: 90%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 0 auto;
-    padding: 1rem 2rem;
-    justify-content: space-between;
-    top: 0;
-    z-index: 3;
-    position: sticky;
-    background: rgb(255, 255, 255);
-    overflow: hidden;
-    
-
+.navbar {
+  height: 5rem;
+  width: 100%; /* Changed to 100% */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 2rem;
+  z-index: 3;
+  position: fixed;
+  top: 0;
+  background: rgba(255, 255, 255, 0.637); /* Changed to rgba for transparency */
+  backdrop-filter: blur(10px); /* Added blurry background effect */
+  -webkit-backdrop-filter: blur(10px); /* For Safari */
+  /* margin-bottom: 3rem; */
 }
+
+
+
 .navbar .navbar-head{
     font-size: 2.3rem;
     
+}
+.navbar .navbar-head:hover{
+  cursor: pointer;
+  
 }
 .navbarBtn{
     appearance: none;
