--- a/public/style.css
+++ b/public/style.css
@@ -14,3 +14,14 @@ body{
     overflow-y: scroll;
     
 }   
+::-webkit-scrollbar{
+    width: 10px;
+}
+::-webkit-scrollbar-track{
+    background-color: #ffffff7f;
+    border-radius: 10px;
+}
+::-webkit-scrollbar-thumb{
+    background-color: #da0037;
+    border-radius: 10px;
+}
