--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -118,5 +118,11 @@
     .card img{
       margin: auto;
     }
+    .spiral{
+      display: none;
+    }
+    .spiral2{
+      display: none;
+    }
   }
   
